# flow-ui

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
cmake/: add_libs.cmake  flow-uiConfig.cmake.in
examples/simple_module/: CMakeLists.txt
examples/simple_module/include/: Example.hpp
examples/simple_module/src/: register.cpp
include/flow/ui/: Config.hpp  Core.hpp  Editor.hpp  FileExplorer.hpp  FileStorage.hpp  Style.hpp  Texture.hpp  ViewFactory.hpp  Widget.hpp  Window.hpp
include/flow/ui/utilities/: Builders.hpp  Helpers.hpp  Widgets.hpp
include/flow/ui/views/: ConnectionView.hpp  LinkView.hpp  NodeView.hpp  PortView.hpp
include/flow/ui/widgets/: InputField.hpp  PropertyTree.hpp  Table.hpp  Text.hpp
include/flow/ui/windows/: GraphWindow.hpp  ImageInspectorWindow.hpp  LogWindow.hpp  ModuleManagerWindow.hpp  NewModuleWindow.hpp  NodeExplorerWindow.hpp  PropertyWindow.hpp  ShortcutsWindow.hpp
programs/editor/: CMakeLists.txt
programs/editor/src/: main.cpp
src/: Config.cpp  Core.cpp  Editor.cpp  EditorNodes.hpp  FileExplorer.cpp  FileStorage.cpp  Style.cpp  Texture.cpp  ViewFactory.cpp  Window.cpp
src/utilities/: Builders.cpp  Builders.hpp  Conversions.hpp  Widgets.cpp  Widgets.hpp
src/views/: ConnectionView.cpp  LinkView.cpp  NodeView.cpp  PortView.cpp
src/widgets/: InputField.cpp  PropertyTree.cpp  Table.cpp  Text.cpp
src/windows/: GraphWindow.cpp  ImageInspectorWindow.cpp  LogWindow.cpp  ModuleInfo.hpp  ModuleManagerWindow.cpp  NewModuleWindow.cpp  NodeExplorerWindow.cpp  PropertyWindow.cpp  ShortcutsWindow.cpp
templates/: ModuleCMakeLists.txt.in  register.cpp.in
